<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"



                                                   style="@style/colorAppBackgroundDarkT"
                                                   android:layout_width="fill_parent"
                                                   android:layout_height="fill_parent"
                                                   android:gravity="end"
                                                   android:orientation="vertical"
                                                   android:weightSum="7"



>



    <androidx.drawerlayout.widget.DrawerLayout

            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">







        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="vertical"
                android:padding="0dp">


            <TextView
                    android:id="@+id/operationLine"
                    style="@style/colorDisplayTextDarkT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/ds"

                    android:textSize="40sp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/black" />

            <TextView
                    android:id="@+id/resultLine"
                    style="@style/colorDisplayTextDarkT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/ds"
                    android:letterSpacing="-0.02"
                    android:singleLine="true"

                    android:textSize="70sp" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="4"
                android:baselineAligned="false">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/btn_reset"
                        style="@style/buttonDeleteDarkT"

                        android:maxLines="1"
                        android:onClick="resetClick"
                        android:text="@string/ac"

                />

                <Button
                        android:id="@+id/btn_seven"
                        style="@style/buttonNumberDarkT"


                        android:onClick="onNumberClick"
                        android:text="@string/_7"


                />

                <Button
                        android:id="@+id/btn_four"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_4" />

                <Button
                        android:id="@+id/btn_one"

                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_1" />

                <Button
                        android:id="@+id/btn_zero"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_0" />


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                <Button
                        android:id="@+id/btn_percentage"
                        style="@style/buttonOperationPercentageDarkT"


                        android:text="@string/_Percent"


                />

                <Button
                        android:id="@+id/btn_eight"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_8"


                />

                <Button
                        android:id="@+id/btn_five"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_5" />

                <Button
                        android:id="@+id/btn_two"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_2" />


                <Button
                        android:id="@+id/btn_dot"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_Dot"


                />


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                <Button
                        android:id="@+id/btn_divide"
                        style="@style/buttonOperationDivideDarkT"

                        android:text="@string/_Divide"

                />


                <Button
                        android:id="@+id/btn_nine"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_9"


                />

                <Button
                        android:id="@+id/btn_six"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_6"

                />

                <Button
                        android:id="@+id/btn_three"
                        style="@style/buttonNumberDarkT"

                        android:onClick="onNumberClick"
                        android:text="@string/_3"

                />


                <Button
                        android:id="@+id/btn_back"
                        style="@style/buttonDeleteDarkT"

                        android:onClick="backspaceClick"
                        android:text="@string/_Backspace" />


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="5">


                <Button
                        android:id="@+id/btn_multiple"
                        style="@style/buttonOperationMultiplyDarkT"

                        android:text="@string/_Multiple" />

                <Button
                        android:id="@+id/btn_minus"

                        style="@style/buttonOperationMinusDarkT"


                        android:text="@string/_Minus" />

                <Button
                        android:id="@+id/btn_plus"
                        style="@style/buttonOperationPlusDarkT"


                        android:text="@string/_Plus" />


                <Button
                        android:id="@+id/btn_equal"
                        style="@style/buttonOperationEqualDarkT"

                        android:text="@string/_Equal"

                />


            </LinearLayout>

        </LinearLayout>
        <ListView
                android:id="@+id/drawerList"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#ffeeeeee"/>

    </androidx.drawerlayout.widget.DrawerLayout>


</androidx.constraintlayout.widget.ConstraintLayout>